<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        app:cardCornerRadius="250dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sender_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/avatar_picture" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sender_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_small"
        android:text="@string/name_example"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sender_nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_small"
        android:text="@string/nickname_example"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/sender_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:rotation="90"
        android:text="@string/point_divider"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/timeText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_normal"
        android:text="@string/example_time"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tweetMenuText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tweetText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_small"
        android:layout_marginTop="@dimen/dimen_very_small"
        android:text="@string/some_example_tweet_random_text_to_check"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/sender_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/tweet_picture_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_small"
        android:layout_marginTop="@dimen/dimen_small"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tweetText">

        <ImageView
            android:id="@+id/tweetImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tweetMenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="270"
        android:text="@string/menu_three_points"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/timeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/commentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/comment"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/rtButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/tweet_picture_iv"
        app:layout_constraintTop_toBottomOf="@+id/tweet_picture_iv"
        app:srcCompat="@drawable/ic_outline_mode_comment_24" />


    <ImageButton
        android:id="@+id/rtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/favButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/commentButton"
        app:layout_constraintTop_toBottomOf="@+id/tweet_picture_iv"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/retweet"
        android:contentDescription="@string/retweet_button" />

    <TextView
        android:id="@+id/rtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/rtButton"
        app:layout_constraintStart_toEndOf="@+id/rtButton"
        app:layout_constraintTop_toTopOf="@+id/rtButton" />

    <ImageButton
        android:id="@+id/favButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/shareButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rtButton"
        app:layout_constraintTop_toBottomOf="@+id/tweet_picture_iv"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/like_button" />

    <TextView
        android:id="@+id/favText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_55"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/favButton"
        app:layout_constraintStart_toEndOf="@+id/favButton"
        app:layout_constraintTop_toTopOf="@+id/favButton" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="@+id/tweet_picture_iv"
        app:layout_constraintStart_toEndOf="@+id/favButton"
        app:layout_constraintTop_toBottomOf="@+id/tweet_picture_iv"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
