<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:contentPadding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:cardCornerRadius="250dp"
            app:layout_constraintBottom_toTopOf="@+id/recommend_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5">

            <ImageView
                android:id="@+id/recommend_profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/recommend_name_text"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_example"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@+id/recommend_nick_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <TextView
            android:id="@+id/recommend_nick_name_text"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nickname_example"
            app:layout_constraintBottom_toTopOf="@+id/followButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommend_name_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/followButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:textColor="@color/black"
            app:cornerRadius="100dp"
            app:iconTint="#03A9F4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommend_nick_name_text"
            app:strokeColor="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
