<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NotificationsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="4dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:theme="?attr/actionBarTheme"
                app:buttonGravity="center_vertical"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="144dp"
                    android:text="@string/notifications_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/star"
                    android:src="@drawable/ic_baseline_star_border_24" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="start"
                    app:cardCornerRadius="248dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/profileAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/avatar"
                        android:scaleType="centerCrop"
                        android:src="@drawable/avatar_picture" />

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabTextColor="@color/black" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tab_layout"
            app:layout_constraintTop_toBottomOf="@id/tab_layout" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTweetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_normal"
            android:layout_marginBottom="@dimen/dimen_normal"
            android:backgroundTint="@color/twitter_blue"
            android:clickable="true"
            android:contentDescription="@string/add_tweet"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>